<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    >
<LinearLayout
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:text="@string/feedTxtTitle"
        android:id="@+id/txtTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



    <TextView
        android:text="@string/feedTxtPubDate"
        android:id="@+id/txtPubDate"
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:text="@string/feedContent"
        android:id="@+id/txtContent"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </LinearLayout>

</androidx.cardview.widget.CardView>